# iota_nif

./: .env.example  .gitignore  Cargo.toml  README.md  mix.exs  rebar.config
include/: iota_nif.hrl
scripts/: package_precompiled.sh
src/: iota_did_nif.app.src  iota_did_nif.erl  iota_nif.app.src  iota_nif.erl  lib.rs  lib_credential.rs  lib_did.rs  lib_ledger.rs  lib_notarization.rs
src/credential/: iota_credential_nif.erl
src/identity/: iota_did_nif.erl
src/notarization/: iota_notarization_nif.erl
test/: ct.config  iota_client_mock.erl  iota_credential_nif_SUITE.erl  iota_did_nif_SUITE.erl  iota_notarization_nif_SUITE.erl  nif_resilience_SUITE.erl
