[package]
name = "iota_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "iota_nif"
crate-type = ["cdylib"]

[dependencies]
# Erlang NIF bindings
rustler = "0.34"

# IOTA Identity SDK for DID operations
identity_iota = { version = "1.5", features = ["memstore"] }

# Async runtime (IOTA SDK requires async)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and encoding (for notarization)
sha2 = "0.10"
hex = "0.4"
