[package]
name = "iota_nif"
version = "0.2.0"
edition = "2021"

[lib]
name = "iota_nif"
crate-type = ["cdylib"]

[dependencies]
# Erlang NIF bindings
rustler = "0.34"

# IOTA Identity SDK for DID operations (Rebased/MoveVM compatible)
# v1.8.0-beta.2 — compatible with IOTA Rebased networks
identity_iota = { git = "https://github.com/iotaledger/identity.git", tag = "v1.8.0-beta.2", features = ["iota-client", "send-sync", "memstore"] }

# Official IOTA Notarization library for on-chain notarization operations
notarization = { git = "https://github.com/iotaledger/notarization", tag = "v0.1", features = ["send-sync"] }

# Shared IOTA product types (NetworkName, etc.) — v0.8.8 matches identity_iota
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.8" }

# IOTA interaction layer (same version as notarization) — provides KeyPairSigner
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.10", features = ["keypair-signer"] }

# IOTA SDK for DID/identity operations (v1.13.1 — matches identity_iota)
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.13.1" }

# IOTA SDK for notarization operations (v1.15.0 — matches notarization crate)
iota-sdk-v15 = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.15.0" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and encoding (for notarization)
sha2 = "0.10"
hex = "0.4"

# Ed25519 key derivation (public key from private key)
ed25519-dalek = "2.1"

# Base64 encoding/decoding for key import
base64 = "0.22"

# Bech32m decoding for IOTA CLI key format (iotaprivkey1...)
bech32 = "0.11"
